# claude-playground

./: .gitignore  README.md
aarm/: README.md  __init__.py  context_accumulator.py  demo.py  intent_alignment.py  models.py  policy_engine.py  runtime.py  tool_proxy.py
aarm-sdk/: pyproject.toml
aarm-sdk/src/aarm/: __init__.py  context_accumulator.py  intent_alignment.py  models.py  policy_engine.py  runtime.py  tool_proxy.py
aarm/aarm_platform/: __init__.py  aarm_platform.py
aarm/agent/: __init__.py  agent.py  demo.py  platform.py  requirements.txt  tools.py
aarm/demo/: demo.py
aarm/laarma_sdk/: pyproject.toml
aarm/laarma_sdk/src/laarma/: __init__.py  context_accumulator.py  deferral.py  distance_calculator.py  environment.py  intent_alignment.py  models.py  policy_engine.py  runtime.py  tool_proxy.py
aarm/my_project/: __init__.py  agent.py  benchmark.py  benchmark_data.jsonl  demo.py  demo_output_sample.txt  tools.py
aarm/platform/: __init__.py  platform.py
aarm/sdk/: pyproject.toml
aarm/sdk/src/aarm/: __init__.py  context_accumulator.py  intent_alignment.py  models.py  runtime.py
aarm/sdk/src/aarm/platform/: __init__.py  platform.py
agent/: demo.py  requirements.txt
mermaid_samples/: README.md
web_research_agent/: README.md  agent.py
