[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aarm-sdk"
version = "0.1.0"
description = "AARM (Autonomous Action Runtime Management) SDK プロトタイプ"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["src"]
