[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aarm-sdk"
version = "0.1.0"
description = "AARM (Autonomous Action Runtime Management) SDK プロトタイプ"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["src"]
